
   * fill-out object/coord set specific settings

   * clean-up return conventions in cmd.py

   * complete first-round test-cases

   * feedback conditionals placed around all error output

   * draw all solid representations before drawing lines
     in order to improve antialiasing.

Bugs to Fix

   * superpositions system fails with degenerate sets (planer atoms, etc).

Changes up to 0.63

   * fixed rendering background color bug on BigEndian machines

   * fixed fatal bug with symexp

   * first attempt at support for CCP4's binary maps -- it works with my
     test maps, but will it work with others?

Changes up to 0.62

   * tuned up the util.ray_shadows function, added a "matte" mode for better
     definition of ribbons...

   * integrated workaround for an apparent GCC serial optimizer bug on x86.

Changes up to 0.61

   * bg_color command for easier background adjustments...

   * depth cue menu item and ray_trace_fog linked

   * cartoon_discrete_colors hack for coloring secondary structure properly

   * (ss ...) primitive in selector for selecting helices, etc.

   * many cartoon ribbons improvements -- flat fancy sheets now VERY nice.

Changes up to 0.60

   * third generation fancy helices complete -- revamped interpolation code.

   * ray now takes dimensions for rendering larger than screen

   * unpick and hide selection buttons

   * various new menu items...

   * preparing for GLUT independence on selected platforms...

   * choice of lighting modes for ray-tracing (improved shadows, contrast)

   * settings renames (gl_ambient, dot_radius)

   * settings changes (hash_max) and ray-tracing feedback

   * "help faster"

   * fixed minor glitch with fancy helices

Changes up to 0.59

   * fixed valency display bug...

Changes up to 0.58

   * second generation cartoon ribbons are in -- Goodbye Molscript!

   * fixed half-decade old logic bug in MemoryDebug (blush!).

   * "alter" and "alter_state" given a 50% performance boost
